--- a/src/notebook/2. MODEL TRAINING.ipynb
+++ b/src/notebook/2. MODEL TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -41,6 +41,7 @@
     "from sklearn.linear_model import LinearRegression, Ridge,Lasso\n",
     "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
     "from xgboost import XGBRegressor\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "7d4ba425",
    "metadata": {},
    "outputs": [
@@ -80,12 +81,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/stud.csv')"
+    "df = pd.read_csv(r'D:\\mlproject\\src\\notebook\\data\\stud.csv')"
    ]
   },
   {
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -209,7 +210,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "id": "cd613177",
    "metadata": {},
    "outputs": [
@@ -343,7 +344,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "id": "f237ea14",
    "metadata": {},
    "outputs": [
@@ -390,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
@@ -400,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "id": "ffc69816",
    "metadata": {},
    "outputs": [
@@ -421,7 +422,7 @@
        "Name: math_score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
@@ -457,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
@@ -467,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
@@ -477,7 +478,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 28,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
@@ -498,7 +499,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 29,
    "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
@@ -535,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 30,
    "id": "79ccb8e7",
    "metadata": {
     "scrolled": false
@@ -604,22 +605,22 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 8.2049\n",
-      "- Mean Absolute Error: 6.4800\n",
-      "- R2 Score: 0.7233\n",
+      "- Root Mean Squared Error: 8.3229\n",
+      "- Mean Absolute Error: 6.5500\n",
+      "- R2 Score: 0.7153\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.2883\n",
-      "- Mean Absolute Error: 1.8174\n",
-      "- R2 Score: 0.9768\n",
+      "- Root Mean Squared Error: 2.3009\n",
+      "- Mean Absolute Error: 1.8312\n",
+      "- R2 Score: 0.9765\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0264\n",
-      "- Mean Absolute Error: 4.6849\n",
-      "- R2 Score: 0.8508\n",
+      "- Root Mean Squared Error: 5.9821\n",
+      "- Mean Absolute Error: 4.6311\n",
+      "- R2 Score: 0.8529\n",
       "===================================\n",
       "\n",
       "\n",
@@ -638,14 +639,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.8757\n",
-      "- Mean Absolute Error: 4.8016\n",
-      "- R2 Score: 0.8469\n",
+      "- Root Mean Squared Error: 5.7769\n",
+      "- Mean Absolute Error: 4.7344\n",
+      "- R2 Score: 0.8520\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.9599\n",
-      "- Mean Absolute Error: 4.6113\n",
-      "- R2 Score: 0.8540\n",
+      "- Root Mean Squared Error: 6.0428\n",
+      "- Mean Absolute Error: 4.6909\n",
+      "- R2 Score: 0.8499\n",
       "===================================\n",
       "\n",
       "\n"
@@ -711,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 31,
    "id": "e0159e5f",
    "metadata": {},
    "outputs": [
@@ -752,14 +753,14 @@
        "      <td>0.879046</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.854030</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.850754</td>\n",
+       "      <td>0.852940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>AdaBoost Regressor</td>\n",
+       "      <td>0.849939</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -779,7 +780,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.723348</td>\n",
+       "      <td>0.715335</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -789,15 +790,15 @@
        "                Model Name  R2_Score\n",
        "2                    Ridge  0.880593\n",
        "0        Linear Regression  0.879046\n",
-       "7       AdaBoost Regressor  0.854030\n",
-       "5  Random Forest Regressor  0.850754\n",
+       "5  Random Forest Regressor  0.852940\n",
+       "7       AdaBoost Regressor  0.849939\n",
        "6             XGBRegressor  0.827797\n",
        "1                    Lasso  0.825320\n",
        "3    K-Neighbors Regressor  0.783497\n",
-       "4            Decision Tree  0.723348"
+       "4            Decision Tree  0.715335"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 32,
    "id": "9a6ad559",
    "metadata": {},
    "outputs": [
@@ -846,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 33,
    "id": "eb557b0a",
    "metadata": {},
    "outputs": [
@@ -869,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 34,
    "id": "1e707ec3",
    "metadata": {},
    "outputs": [
@@ -898,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 35,
    "id": "7c9a8b48",
    "metadata": {},
    "outputs": [
@@ -1017,7 +1018,7 @@
        "[200 rows x 3 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
