Data Transformation done

--- a/src/notebook/2. MODEL TRAINING.ipynb
+++ b/src/notebook/2. MODEL TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -31,6 +31,7 @@
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns\n",
     "import xgboost as xgb\n",
+    "import catboost as cb\n",
     "import sklearn\n",
     "# Modelling\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
@@ -41,7 +42,7 @@
     "from sklearn.linear_model import LinearRegression, Ridge,Lasso\n",
     "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
-    "\n",
+    "from catboost import CatBoostRegressor\n",
     "from xgboost import XGBRegressor\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "7d4ba425",
    "metadata": {},
    "outputs": [
@@ -57,10 +58,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NumPy version: 2.0.1\n",
-      "pandas version: 2.2.2\n",
+      "NumPy version: 1.26.4\n",
+      "pandas version: 2.1.1\n",
       "scikit-learn version: 1.5.1\n",
-      "XGBoost version: 2.1.1\n"
+      "XGBoost version: 2.1.1\n",
+      "Catboost version: 1.2.5\n"
      ]
     }
    ],
@@ -68,7 +70,8 @@
     "print(f\"NumPy version: {np.__version__}\")\n",
     "print(f\"pandas version: {pd.__version__}\")\n",
     "print(f\"scikit-learn version: {sklearn.__version__}\")\n",
-    "print(f\"XGBoost version: {xgb.__version__}\")"
+    "print(f\"XGBoost version: {xgb.__version__}\")\n",
+    "print(f\"Catboost version: {cb.__version__}\")"
    ]
   },
   {
@@ -81,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
@@ -229,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -355,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "f237ea14",
    "metadata": {},
    "outputs": [
@@ -391,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
@@ -401,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "ffc69816",
    "metadata": {},
    "outputs": [
@@ -422,7 +425,7 @@
        "Name: math_score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
@@ -458,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
@@ -468,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
@@ -478,7 +481,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
@@ -499,7 +502,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
@@ -536,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "79ccb8e7",
    "metadata": {
     "scrolled": false
@@ -605,22 +608,22 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 8.3229\n",
-      "- Mean Absolute Error: 6.5500\n",
-      "- R2 Score: 0.7153\n",
+      "- Root Mean Squared Error: 8.0299\n",
+      "- Mean Absolute Error: 6.3100\n",
+      "- R2 Score: 0.7350\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.3009\n",
-      "- Mean Absolute Error: 1.8312\n",
-      "- R2 Score: 0.9765\n",
+      "- Root Mean Squared Error: 2.3068\n",
+      "- Mean Absolute Error: 1.8477\n",
+      "- R2 Score: 0.9764\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.9821\n",
-      "- Mean Absolute Error: 4.6311\n",
-      "- R2 Score: 0.8529\n",
+      "- Root Mean Squared Error: 6.0424\n",
+      "- Mean Absolute Error: 4.7123\n",
+      "- R2 Score: 0.8500\n",
       "===================================\n",
       "\n",
       "\n",
@@ -637,16 +640,29 @@
       "===================================\n",
       "\n",
       "\n",
-      "AdaBoost Regressor\n",
+      "CatBoosting Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.7769\n",
-      "- Mean Absolute Error: 4.7344\n",
-      "- R2 Score: 0.8520\n",
+      "- Root Mean Squared Error: 3.0427\n",
+      "- Mean Absolute Error: 2.4054\n",
+      "- R2 Score: 0.9589\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0428\n",
-      "- Mean Absolute Error: 4.6909\n",
-      "- R2 Score: 0.8499\n",
+      "- Root Mean Squared Error: 6.0086\n",
+      "- Mean Absolute Error: 4.6125\n",
+      "- R2 Score: 0.8516\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "AdaBoost Regressor\n",
+      "Model performance for Training set\n",
+      "- Root Mean Squared Error: 5.9209\n",
+      "- Mean Absolute Error: 4.8541\n",
+      "- R2 Score: 0.8445\n",
+      "----------------------------------\n",
+      "Model performance for Test set\n",
+      "- Root Mean Squared Error: 6.0547\n",
+      "- Mean Absolute Error: 4.7519\n",
+      "- R2 Score: 0.8493\n",
       "===================================\n",
       "\n",
       "\n"
@@ -662,7 +678,7 @@
     "    \"Decision Tree\": DecisionTreeRegressor(),\n",
     "    \"Random Forest Regressor\": RandomForestRegressor(),\n",
     "    \"XGBRegressor\": XGBRegressor(), \n",
-    "    \n",
+    "    \"CatBoosting Regressor\": CatBoostRegressor(verbose=False),\n",
     "    \"AdaBoost Regressor\": AdaBoostRegressor()\n",
     "}\n",
     "model_list = []\n",
@@ -712,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "e0159e5f",
    "metadata": {},
    "outputs": [
@@ -753,14 +769,19 @@
        "      <td>0.879046</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.852940</td>\n",
+       "      <th>7</th>\n",
+       "      <td>CatBoosting Regressor</td>\n",
+       "      <td>0.851632</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>5</th>\n",
+       "      <td>Random Forest Regressor</td>\n",
+       "      <td>0.849960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
        "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.849939</td>\n",
+       "      <td>0.849347</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -780,7 +801,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.715335</td>\n",
+       "      <td>0.735019</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -790,15 +811,16 @@
        "                Model Name  R2_Score\n",
        "2                    Ridge  0.880593\n",
        "0        Linear Regression  0.879046\n",
-       "5  Random Forest Regressor  0.852940\n",
-       "7       AdaBoost Regressor  0.849939\n",
+       "7    CatBoosting Regressor  0.851632\n",
+       "5  Random Forest Regressor  0.849960\n",
+       "8       AdaBoost Regressor  0.849347\n",
        "6             XGBRegressor  0.827797\n",
        "1                    Lasso  0.825320\n",
        "3    K-Neighbors Regressor  0.783497\n",
-       "4            Decision Tree  0.715335"
+       "4            Decision Tree  0.735019"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
